--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,6 @@
 
 </head>
 
-
-
 <body>
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tr style="padding:0px">
@@ -27,7 +25,7 @@
               <h1>
                 Zhang Wenchao 
               </h1>
-              <p> I am an MSc candidate in <a href="https://www.tum.de/studium/studienangebot/detail/informatik-master-of-science-msc">Informatics</a> at the <a href="https://www.tum.de/">ShanghaiTech University</a> and a student researcher at the <a href="https://niessnerlab.org/">Visual Computing and Artificial Intelligence Lab</a>, led by <a href="https://www.niessnerlab.org/members/matthias_niessner/profile.html">Prof. Matthias Niessner</a>. Previously, I earned a BEng in Computer Science, from <a href="https://en.dlut.edu.cn/">Beijing Normal University</a>.
+              <p> I am a First-Year Graduate Student</a> at the <a href="https://www.shanghaitech.edu.cn/">ShanghaiTech University</a> . Previously, I studied chemistry at <a href="https://en.dlut.edu.cn/">Beijing Normal University</a>.
               </p>
               <p>
                 Under <a href="http://faculty.dlut.edu.cn/wuzhenyu/zh_CN/index.htm">Prof. Zhenyu Wu</a> and <a href="https://stephenjia.github.io/">Prof. Xu Jia</a>'s supervision, I concentrated on robotics and machine learning as an undergraduate. During my senior year, I was chosen to be an exchange student at <a href="https://www.tum.de/">TUM</a>, where I began my research and interest in 3D computer vision.
