--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,7 @@
               <p> I am a First-Year Graduate Student</a> at the <a href="https://www.shanghaitech.edu.cn/">ShanghaiTech University</a> . Previously, I studied chemistry at <a href="https://en.dlut.edu.cn/">Beijing Normal University</a>.
               </p>
               <p>
-                Under <a href="http://faculty.dlut.edu.cn/wuzhenyu/zh_CN/index.htm">Prof. Zhenyu Wu</a> and <a href="https://stephenjia.github.io/">Prof. Xu Jia</a>'s supervision, I concentrated on robotics and machine learning as an undergraduate. During my senior year, I was chosen to be an exchange student at <a href="https://www.tum.de/">TUM</a>, where I began my research and interest in 3D computer vision.
-              </p>
-              <p>
-                My current research focuses on 3D reconstruction in computer vision. More specifically, I am working on shape reconstruction and generation, non-rigid deformation, neural implicit representation.
+                Under <a href="https://people.ucas.ac.cn/~0070888">Prof. Zhao Erhu</a> and <a href="https://sist.shanghaitech.edu.cn/2020/0707/c7499a53902/page.htm">Prof. Gao Shenghua </a>'s supervision, I concentrated on computer vision and embedded development.
               </p>
               <p style="text-align:center">
                 <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
