--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,10 @@
                 Under <a href="https://people.ucas.ac.cn/~0070888">Prof. Zhao Erhu</a> and <a href="https://sist.shanghaitech.edu.cn/2020/0707/c7499a53902/page.htm">Prof. Gao Shenghua </a>'s supervision, I concentrated on computer vision and embedded development.
               </p>
               <p style="text-align:center">
-                <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp;
-                <a href="https://github.com/">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/ran-ding-945280167/"> LinkedIn </a>&nbsp;/&nbsp;
-                <a href="https://mobile.twitter.com/alfredding6"> Twitter </a>
+                <!-- <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp; -->
+                <a href="https://github.com/Zhang-Wen-chao">GitHub</a> &nbsp;/&nbsp;
+                <!-- <a href="https://www.linkedin.com/in/ran-ding-945280167/"> LinkedIn </a>&nbsp;/&nbsp;
+                <a href="https://mobile.twitter.com/alfredding6"> Twitter </a> -->
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
