--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,10 +61,10 @@
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
               {% if post.title == 'Unsupervised Multi-View Stereo with Neural Radiance Field' %}
-              <img src="images/3DSpatial.jpg"  style="width:auto; height:auto; max-width:100%;" />
+              <img src="images/zhang_photo.jpg"  style="width:auto; height:auto; max-width:100%;" />
               {% endif %}
               {% if post.title == 'Stereo Reconstruction' %}
-              <img src="images/3DScan.jpg"  style="width:auto; height:auto; max-width:100%;" />
+              <img src="images/zhang_photo.jpg"  style="width:auto; height:auto; max-width:100%;" />
               {% endif %}
             </td>
             <td style="padding:2.5%;width:75%;vertical-align:middle">
